# imgopt_python

./: .gitignore  Cargo.toml  Dockerfile  README.md  dev-requirements.txt  pyproject.toml  requirements-dev.txt  test.sh
examples/image_optimizer/: __main__.py
examples/image_optimzer/: __main__.py
examples/webserver/: pyproject.toml  run.sh
examples/webserver/webserver/: __init__.py  __main__.py
imgopt/: __init__.pyi  imgopt.pyi
scripts/: build.sh  quality.sh  test.sh
src/: lib.rs
tests/: test_convert.py
