[package]
name = "imgopt"
version = "0.1.0"
authors = ["Thomas <thomastimmer11@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
imgopt_native = {git = "https://github.com/thomas9911/imgopt", branch = "main", default-features = false, package = "imgopt"}


[dependencies.pyo3]
version = "0.14.5"
features = ["extension-module"]