[tool.poetry]
authors = ["Thomas <thomastimmer11@hotmail.com>"]
description = ""
name = "imgopt"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
maturin = "^0.11.4"
pdoc = "^8.0.0"
pytest = "^6.2.5"

# [build-system]
# build-backend = "poetry.core.masonry.api"
# requires = ["poetry-core>=1.0.0"]

[build-system]
build-backend = "maturin"
requires = ["maturin>=0.11,<0.12"]
